; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_schema.c_ProcessAlterObjectSchemaStmt.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_schema.c_ProcessAlterObjectSchemaStmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ProcessAlterObjectSchemaStmt(%struct.TYPE_5__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  switch i32 %7, label %16 [
    i32 128, label %8
    i32 129, label %12
    i32 131, label %12
    i32 130, label %12
  ]

8:                                                ; preds = %2
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @ProcessAlterTypeSchemaStmt(%struct.TYPE_5__* %9, i8* %10)
  br label %17

12:                                               ; preds = %2, %2, %2
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @ProcessAlterFunctionSchemaStmt(%struct.TYPE_5__* %13, i8* %14)
  br label %17

16:                                               ; preds = %2
  br label %17

17:                                               ; preds = %16, %12, %8
  ret void
}

declare dso_local i32 @ProcessAlterTypeSchemaStmt(%struct.TYPE_5__*, i8*) #1

declare dso_local i32 @ProcessAlterFunctionSchemaStmt(%struct.TYPE_5__*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
